# merchant-agent

./: .gitignore  MIGRATION_SOURCE.md  README.md  justfile  package.json  turbo.json
apps/backend/: .env.example  pyproject.toml
apps/backend/merchant_agent/: __init__.py  catalog.py  catalog_ingestion.py  contract.py  csv_importer.py  database.py  endpoints.py  enriched_reader.py  kg_projection.py  kg_service.py  main.py  merchant.py  merchant_agent.py  models.py  neo4j_config.py  product_schema.py  schemas.py  structured_logger.py  vector_search.py
apps/backend/merchant_agent/enrichment/: __init__.py  base.py  metrics.py  registry.py  tracing.py  types.py
apps/backend/merchant_agent/ingestion/: __init__.py  csv_loader.py  schema.py
apps/backend/merchant_agent/tools/: __init__.py  supabase_product_store.py
apps/backend/migrations/: 002_create_merchants_schema.sql  003_create_merchants_products_enriched_default.sql  004_merchants_products_default_merchant_id_not_null.sql  005_create_merchants_registry.sql  006_retire_default_merchant_privilege.sql
apps/backend/scripts/: bootstrap_merchant.py  enrichment_inspector.py  run_enrichment.py  run_normalizer.py  seed_mock_laptops.py
apps/backend/tests/: conftest.py  test_catalog_binding.py  test_default_merchant_collapse.py  test_enriched_reader.py  test_enrichment_inspector.py  test_kg_contract.py  test_kg_live_regression.py  test_kg_service.py  test_merchant.py  test_merchant_admin_http.py  test_merchant_registry.py  test_offer_score_breakdown.py  test_per_merchant_vector_index.py  test_vector_search.py
(+45 files in other folders)
